# models/index.js
@@ -1,5 +1,11 @@
 const User = require('./User.js');
+const Tutorial = require('./Tutorial.js');
+const Book = require('./Book.js');
+const HostelRoom = require('./HostelRoom.js');
 
 module.exports = {
-  User
+  User,
+  Tutorial,
+  Book,
+  HostelRoom,
 }
